<resources>
    <string name="app_name">PillenAlarm</string>
    <string name="_1h">1h</string>
    <string name="clock">⏰</string>
    <string name="_30min">30min</string>
    <string name="ok">👍🏻</string>
    <string name="periode">🩸 Periode</string>
    <string name="done_text_period">🎉 Nächsten Alarm gibt\'s nächsten Sonntag um 9.</string>
    <string name="done_text">🎉 Nächsten Alarm gibt\'s morgen um 9.</string>
    <string name="no_notification_permission">Fehlende Berechtigung Benachrichtigungen zu schicken.</string>
    <string name="give_permission">Berechtigung erteilen</string>
    <string name="custom">Custom</string>
    <string name="timer_0">0</string>
    <string name="timer_00">00</string>
    <string name="timer_9">9</string>
    <string name="timer_8">8</string>
    <string name="timer_7">7</string>
    <string name="timer_6">6</string>
    <string name="timer_5">5</string>
    <string name="timer_4">4</string>
    <string name="timer_3">3</string>
    <string name="timer_2">2</string>
    <string name="timer_1">1</string>
    <string name="timer_m">m</string>
    <string name="timer_h">h</string>
    <string name="timer_in">in</string>
    <string name="title_reminder_in">Erinnerung in...</string>
    <string name="title_period">Du nimmst heute keine Pille mehr?</string>
    <string name="next_reminder_text">Nächste Erinnerung gibt\'s %1s.</string>
    <string name="channel_name">Default</string>
    <string name="channel_description">Used to show notifications received while the app is in foreground.</string>
    <string name="goto_liked_gifs">Lieblings GIFs zeigen</string>
    <string name="liked_gifs">Lieblings GIFs</string>
    <string name="snackbar_unlike">GIF aus Favoriten entfernt.</string>
    <string name="snackbar_undo">Undo</string>
    <string name="settings">Einstellungen</string>
    <string name="gallery">Gallerie</string>
    <string name="button_like_description">Like the image</string>
    <string name="button_settings_description">Goto settings</string>
    <string name="button_gallery_description">Goto Gallery</string>
    <string name="gif_tags">GIF Tags</string>
    <string name="gif_tags_explanation">Diese Tags werden mit logischen UND bei der Anfrage an eine GIF übergeben. Es wird also nach GIFs mit allen dieser Tags gesucht, nicht nach beliebigen davon.</string>
    <string name="add">Hinzufügen</string>
    <string name="button_add_description">Add a tag</string>
    <string name="gif_tag_removed">Tag entfernt.</string>
    <string name="settings_saved">Einstellungen gespeichert.</string>
    <string name="gif_provider">GIF Provider</string>
</resources>