<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/TextAppearance.Material3.LabelLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gif_tags" />

    <TextView
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gif_tags_explanation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_add_description"
        android:text="@string/add"
        app:icon="@android:drawable/ic_input_add" />
</LinearLayout>