<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InputFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCard"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingLeft="24dp"
        app:contentPaddingRight="24dp"
        app:contentPaddingTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_ok">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nextReminderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/next_reminder_text"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/reminder_layout"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reminder_in"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/delayLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    app:indicatorSize="30dp"
                    app:indicatorColor="@color/md_theme_primary"
                    app:trackColor="@color/md_theme_inversePrimary"
                    android:indeterminate="true"/>

                <LinearLayout
                    android:id="@+id/buttonRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_in30min"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:textColor="@color/md_theme_primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:importantForAccessibility="no"
                        android:text="@string/_30min" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_in1h"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:importantForAccessibility="no"
                        android:text="@string/_1h" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_custom"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:importantForAccessibility="no"
                        android:text="@string/custom"
                        app:icon="@drawable/timer"
                        app:srcCompat="@drawable/timer" />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:id="@+id/period_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_period"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_period"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="@color/md_theme_secondary"
                    android:text="@string/periode" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button_ok"
        style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_outline"
        android:backgroundTintMode="src_over"
        android:elevation="8dp"
        android:paddingBottom="16dp"
        android:text="@string/ok"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>