<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/timer_in"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timer_00"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/hLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_h"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/timer_00"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/mLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timer_m"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display">

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_1"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/TimerButton.Margin"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_2"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_3"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_4"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/TimerButton.Margin"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_5"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_6"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_7"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/TimerButton.Margin"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_8"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_9"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button00"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_00"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/TimerButton.Margin"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                android:backgroundTintMode="src_over"
                android:maxWidth="@dimen/TimerButton.Size"
                android:maxHeight="@dimen/TimerButton.Size"
                android:minWidth="@dimen/TimerButton.Size"
                android:minHeight="@dimen/TimerButton.Size"
                android:text="@string/timer_0"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/TimerButton.TextSize" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonBackspace"
                style="@style/Widget.Material3.FloatingActionButton.Large.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:importantForAccessibility="no"
                app:fabCustomSize="84dp"
                app:srcCompat="@drawable/backspace"
                tools:ignore="PrivateResource" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/commitLayout"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/fabProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:elevation="7dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:indicatorColor="@color/md_theme_primary"
                app:trackColor="@color/md_theme_inversePrimary" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonCommit"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/check" />

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonCancel"
            style="@style/Widget.Material3.FloatingActionButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="-83dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/close" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>